--- a/src/pages/detalles.astro
+++ b/src/pages/detalles.astro
@@ -75,7 +75,7 @@ import SliderDetalles from '../components/SliderDetalles.astro';
 
               <!-- Boton historia y cultura -->
               <div class="flex justify-center">               
-                    <button class="mt-4 bg-blue-500 text-white w-36 rounded-xl hover:bg-blue-600">
+                    <button class="mt-8 bg-blue-500 text-white w-36 rounded-xl hover:bg-blue-600">
                         Más detalles
                     </button> 
             </div>
@@ -98,13 +98,13 @@ import SliderDetalles from '../components/SliderDetalles.astro';
             1sLa%20Piedra%20del%20Pe%C3%B1ol: Muestra el nombre del lugar en formato URL (La Piedra del Peñol).
             5e0: Define el tipo de visualización, en este caso, un mapa estándar (0).
             3m2!1sen!2sco: Configura el idioma del mapa (en inglés: `en`) y la región del mapa (Colombia: `co`).-->
-            <div class="flex flex-col justify-center items-center px-4 md:px-3 lg:px-32 2xl:px-64 mx-auto">
-                <h1 class="text-3xl font-bold mb-4 text-center mt-4">Explora el lugar y sus puntos fuertes</h1>
+            <div class="mb-5 flex flex-col justify-center items-center px-4 md:px-3 lg:px-32 2xl:px-64 mx-auto">
+                <h1 class="text-3xl font-bold mb-8 text-center mt-8">Explora el lugar y sus puntos fuertes</h1>
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1m3976.774438095018!2d-75.1750!3d6.2225
                     !2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f77db70d318f1%3A0xd758e0f59f1ae42b!2sLa%20
                     Piedra%20del%20Pe%C3%B1ol!5e0!3m2!1sen!2sco!4v1646330764399!5m2!1sen!2sco"
-                    class="w-96 h-96 border-0" allowfullscreen loading="lazy">
+                    class="w-[1000px] h-[500px] rounded-2xl border-2 border-slate-300" allowfullscreen loading="lazy">
                 </iframe>
             </div>
             <Footer/>
