--- a/src/pages/detalles.astro
+++ b/src/pages/detalles.astro
@@ -104,7 +104,7 @@ import SliderDetalles from '../components/SliderDetalles.astro';
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1m3976.774438095018!2d-75.1750!3d6.2225
                     !2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f77db70d318f1%3A0xd758e0f59f1ae42b!2sLa%20
                     Piedra%20del%20Pe%C3%B1ol!5e0!3m2!1sen!2sco!4v1646330764399!5m2!1sen!2sco"
-                    class="w-[1000px] h-[500px] rounded-2xl border-2 border-slate-300" allowfullscreen loading="lazy">
+                    class="w-full h-[600px] rounded-2xl border-2 border-slate-300" allowfullscreen loading="lazy">
                 </iframe>
             </div>
             <Footer/>
