--- a/src/pages/detalles.astro
+++ b/src/pages/detalles.astro
@@ -19,40 +19,40 @@ import SliderDetalles from '../components/SliderDetalles.astro';
  
     <SliderDetalles/>
         <!-- Section itinerarios -->
-        <div class="flex flex-wrap space-x-36 justify-center mt-8">
-           
+        <div class="flex flex-wrap justify-center mt-8">
             <article class="flex flex-col ml-4">
                 <h1 class="text-3xl font-bold mb-4">Información general</h1>
                 <strong class="text-lg font-semibold">Cancelación gratuita</strong>
-                    <span class="text-sm text-gray-600 mb-3">
-                        Cancela con hasta 24 horas de antelación y recibe un reembolso completo
-                    </span>
-                    <strong class="text-lg font-semibold">Reservar ahora y pagar después</strong>
-                    <span class="text-sm text-gray-600 mb-3">
-                        Planes flexibles: reserva tu plaza de inmediato, sin que se te haga el cargo
-                    </span>
-                    <strong class="text-lg font-semibold">Duración 10.5 horas</strong>
-                    <span class="text-sm text-gray-600 mb-3">
-                        Comprueba la disponibilidad para ver los horarios de inicio.
-                    </span>
-                    <strong class="text-lg font-semibold">Guía</strong>
-                    <span class="text-sm text-gray-600 mb-3">
-                        Español, Inglés
-                    </span>
-                    <strong class="text-lg font-semibold">Servicio de recogida opcional</strong>
-                    <span class="text-sm text-gray-600 mb-3">
-                        Incluye el servicio de recogida en tu hotel en la zona de El Poblado. 
-                        El tiempo máximo de espera en el hotel es de 5 minutos.
-                    </span>
-                    
+                <span class="text-sm text-gray-600 mb-3">
+                    Cancela con hasta 24 horas de antelación y recibe un reembolso completo
+                </span>
+                <strong class="text-lg font-semibold">Reservar ahora y pagar después</strong>
+                <span class="text-sm text-gray-600 mb-3">
+                    Planes flexibles: reserva tu plaza de inmediato, sin que se te haga el cargo
+                </span>
+                <strong class="text-lg font-semibold">Duración 10.5 horas</strong>
+                <span class="text-sm text-gray-600 mb-3">
+                    Comprueba la disponibilidad para ver los horarios de inicio.
+                </span>
+                <strong class="text-lg font-semibold">Guía</strong>
+                <span class="text-sm text-gray-600 mb-3">
+                    Español, Inglés
+                </span>
+                <strong class="text-lg font-semibold">Servicio de recogida opcional</strong>
+                <span class="text-sm text-gray-600 mb-3">
+                    Incluye el servicio de recogida en tu hotel en la zona de El Poblado. 
+                    El tiempo máximo de espera en el hotel es de 5 minutos.
+                </span>
             </article>
-            <article class="flex bg-white rounded-2xl shadow-lg overflow-hidden max-w-md m-4">
+        
+            <article class="flex flex-col bg-white rounded-2xl shadow-lg overflow-hidden max-w-md m-4 sm:w-full sm:max-w-xs sm:mt-6">
                 <header class="flex w-full flex-col text-center py-2">
                     <strong class="text-lg font-semibold">Flyer</strong>
                     <img src="../img/Flyer.png" alt="Name Hotel" class="object-cover rounded-2xl mt-2">
                 </header>
             </article>
         </div>
+        
        <!-- historia y cultura -->
         <article class="flex flex-col px-4 md:px-3 lg:px-32 2xl:px-64 mx-auto">
             <h1 class="text-3xl font-bold mb-4 text-center mt-4">Historia y cultura</h1>
