gap: aplicando responsive

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -2,7 +2,7 @@
     <div class="titulo text-center mb-6">
         <h1 class="text-3xl font-bold mt-4">Explora la Magia de Nuestro Paraíso Colombiano</h1>
     </div>
-    <div class="flex justify-center space-x-4 mb-6 md:gap-16">
+    <div class="flex justify-center space-x-4 mb-6 sm:gap-16 md:gap-8 lg:gap-16">
         <button id="hotelesBtn" class="category-button border border-blue-500 rounded-lg p-4 transition-all">
             <a href="/hoteles">
                 <span class="flex flex-col items-center">
