--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import SliderIndex from '../components/SliderIndex.astro';
     <div class="titulo text-center mb-6">
         <h1 class="text-3xl font-bold mt-4">Explora la Magia de Nuestro Paraíso Colombiano</h1>
     </div>
-    <div class="flex justify-center space-x-4 mb-6 md:gap-16">
+    <div class="flex justify-center space-x-4 mb-6 sm:gap-16 md:gap-8 lg:gap-16">
         <button class="border border-blue-500 rounded-lg p-4 hover:bg-blue-500 transition-all bg-white">
             <a href="/hoteles"><span class="flex flex-col items-center">
                 <img src="../img/hotel.png" alt="hoteles" class="w-12 h-12 mb-2">
