Añadiendo sección HistoriaCultura

--- a/src/pages/detalles.astro
+++ b/src/pages/detalles.astro
@@ -53,7 +53,7 @@ import SliderDetalles from '../components/SliderDetalles.astro';
             </article>
         </div>
         
-       <!-- historia y cultura -->
+       <!--historia y cultura -->
         <article class="flex flex-col px-4 md:px-3 lg:px-32 2xl:px-64 mx-auto">
             <h1 class="text-3xl font-bold mb-4 text-center mt-4">Historia y cultura</h1>
             <p class="text-sm text-gray-600">
@@ -74,10 +74,12 @@ import SliderDetalles from '../components/SliderDetalles.astro';
               En 1954, la Piedra fue oficialmente escalada por primera vez. Los habitantes locales, especialmente la familia Villegas...
 
               <!-- Boton historia y cultura -->
-              <div class="flex justify-center">               
+              <div class="flex justify-center">
+                <a href="/HistoriaCultura">               
                     <button class="mt-8 bg-blue-500 text-white w-36 rounded-xl hover:bg-blue-600">
                         Más detalles
-                    </button> 
+                    </button>
+                </a>
             </div>
             </p>
           </article>
