--- a/src/pages/HistoriaCultura.astro
+++ b/src/pages/HistoriaCultura.astro
@@ -9,7 +9,7 @@ import Layout from '../layouts/Layout.astro';
 
    
 <article class="flex flex-col px-4 md:px-3 lg:px-32 2xl:px-64"> 
-    <h1 class="text-3xl font-bold mb-4 text-center mt-4">La Piedra del Peñol Antioquia Colombia</h1>
+    <h1 class="text-3xl font-bold mb-14 text-center mt-4">La Piedra del Peñol Antioquia Colombia</h1>
     
     <!-- Contenedor-->
     <div class="flex flex-col md:flex-row justify-between items-stretch">
@@ -70,7 +70,7 @@ import Layout from '../layouts/Layout.astro';
         <!-- Párrafo 3-->
         <div class="md:w-2/3">
             <strong class="text-lg font-semibold">Mitos y leyendas</strong>
-            <p class="text-sm text-gray-600 mb-2">
+            <p class="text-sm text-gray-600 mb-2 mt-2">
                 La Piedra del Peñol también ha generado varias leyendas. Una de las más populares es la creencia de que dentro de la roca hay un 
                 tesoro oculto dejado por los indígenas, aunque no se han encontrado pruebas. Otra leyenda cuenta que la piedra fue 
                 arrojada desde el cielo por un dios enojado o un volcán, lo que explicaría su presencia imponente en medio de un terreno plano.            
@@ -85,6 +85,60 @@ import Layout from '../layouts/Layout.astro';
             <img src="../img/gurpoPiedra3.png" alt="Piedra del Peñol" class="w-full h-auto max-h-64 object-cover rounded-lg">
         </div>
     </div>
+    <!-- Contenedor inverso-->
+    <div class="flex flex-col md:flex-row justify-between items-stretch">
+         <!-- Imagen -->
+        <div class="md:w-1/3 mt-4 md:mt-0 md:mr-4">
+            <img src="../img/grupoPiedra1.png" alt="Piedra del Peñol" class="w-full h-auto max-h-64 object-cover rounded-lg">
+        </div>
+        <!-- Párrafo 1-->
+        <div class="md:w-2/3">
+            <p class="text-sm text-gray-600 mb-2">
+            La Piedra del Peñol, también conocida como El Peñón de Guatapé, es uno de los sitios turísticos más emblemáticos de 
+            Colombia. Esta inmensa roca monolítica, ubicada en el municipio de Guatapé, departamento de Antioquia, tiene una altura 
+            de aproximadamente 220 metros y se ha convertido en un destino muy popular por su imponente presencia y las 
+            increíbles vistas que ofrece de la región.
+            </p>
+            <strong class="text-lg font-semibold">Historia</strong>
+            <p class="text-sm text-gray-600 mt-2">
+                La Piedra del Peñol tiene una historia que se entrelaza con las comunidades indígenas y la población local. Antes de la llegada de los 
+                colonizadores españoles, la piedra era un sitio sagrado para las tribus tahamíes que habitaban la región, quienes la consideraban un objeto de adoración.
+                <br><br>
+                El nombre "Piedra del Peñol" proviene del municipio vecino El Peñol, aunque la piedra se encuentra en el municipio de Guatapé, lo que ha generado 
+                algunas disputas sobre su pertenencia. En 1940, un grupo de personas del municipio de Guatapé comenzó a subir la roca para marcarla como símbolo del pueblo, iniciando a pintar las letras 
+                "G" y "U" en una de sus caras. Sin embargo, el trabajo no fue completado debido a la oposición de los habitantes de El Peñol.
+                <br><br>
+            </p>
+        </div>
+        
+    </div>
+        <!-- Contenedor inverso-->
+        <div class="flex flex-col md:flex-row justify-between items-stretch">
+            <!-- Imagen -->
+           <div class="md:w-1/3 mt-4 md:mt-0 md:mr-4">
+               <img src="../img/grupoPiedra1.png" alt="Piedra del Peñol" class="w-full h-auto max-h-64 object-cover rounded-lg">
+           </div>
+           <!-- Párrafo 2-->
+           <div class="md:w-2/3">
+               <p class="text-sm text-gray-600 mb-2">
+               La Piedra del Peñol, también conocida como El Peñón de Guatapé, es uno de los sitios turísticos más emblemáticos de 
+               Colombia. Esta inmensa roca monolítica, ubicada en el municipio de Guatapé, departamento de Antioquia, tiene una altura 
+               de aproximadamente 220 metros y se ha convertido en un destino muy popular por su imponente presencia y las 
+               increíbles vistas que ofrece de la región.
+               </p>
+               <strong class="text-lg font-semibold">Historia</strong>
+               <p class="text-sm text-gray-600 mt-2">
+                   La Piedra del Peñol tiene una historia que se entrelaza con las comunidades indígenas y la población local. Antes de la llegada de los 
+                   colonizadores españoles, la piedra era un sitio sagrado para las tribus tahamíes que habitaban la región, quienes la consideraban un objeto de adoración.
+                   <br><br>
+                   El nombre "Piedra del Peñol" proviene del municipio vecino El Peñol, aunque la piedra se encuentra en el municipio de Guatapé, lo que ha generado 
+                   algunas disputas sobre su pertenencia. En 1940, un grupo de personas del municipio de Guatapé comenzó a subir la roca para marcarla como símbolo del pueblo, iniciando a pintar las letras 
+                   "G" y "U" en una de sus caras. Sin embargo, el trabajo no fue completado debido a la oposición de los habitantes de El Peñol.
+                   <br><br>
+               </p>
+           </div>
+           
+       </div>
 
 </article>
 
