--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import SliderIndex from '../components/SliderIndex.astro';
         </button>
         <button class="border border-blue-500 rounded-lg p-4 hover:bg-blue-500 transition-all bg-white">
             <a href="/actividades"><span class="flex flex-col items-center">
-                <img src="../img/actividades.png" alt="actividades" class="w-12 h-12 mb-2">
+                <img src="../img/logo-actividades.png" alt="actividades" class="w-12 h-12 mb-2">
                 Actividades
             </span></a>
         </button>
