--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -14,7 +14,7 @@
         <button id="actividadesBtn" class="category-button border border-blue-500 rounded-lg p-4 transition-all">
             <a href="/actividades">
                 <span class="flex flex-col items-center">
-                    <img src="../img/actividades.png" alt="actividades" class="w-12 h-12 mb-2">
+                    <img src="../img/logo-actividades.png" alt="actividades" class="w-12 h-12 mb-2">
                     Actividades
                 </span>
             </a>
