--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -26,7 +26,7 @@ import Layout from '../layouts/Layout.astro';
                 Iniciar sesión con Facebook
             </div>
             <div class="w-full sm:w-72 h-10 button rounded-full shadow-lg bg-white py-3 px-6 mb-4 mt-6 flex justify-center items-center cursor-pointer transition duration-300 ease-in-out hover:bg-blue-700" id="apple">
-                <img src="../img/Apple.png" alt="Apple Logo" class="w-6 h-7 mr-8">
+                <img src="../img/logo-apple.png" alt="Apple Logo" class="w-6 h-7 mr-8">
                 Iniciar sesión con Apple
             </div>
         </div>
