Se agregan nuevas funciones

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,8 +3,8 @@
 <header class="bg-[#FFFFFF] p-[10px]">
     <nav class="flex justify-center items-center h-[8vh]">
         <div>
-            <a href="index.html">
-                <img class="w-[259px]"src="../img/LogoRutaFinder.svg" alt="Logo">
+            <a href="/">
+            <img class="w-[259px]" src="/img/LogoRutaFinder.svg" alt="Logo">
             </a>
         </div>
     </nav>
