--- a/src/components/ItemCard.astro
+++ b/src/components/ItemCard.astro
@@ -31,7 +31,7 @@ const { id, nombre, img, descripcion, linkBase } = Astro.props;
 
       <!-- Botón de detalles -->
       <div class="flex justify-center">
-        <a href={`/${linkBase}/${id}`}>
+        <a href={`/${id}`}>
           <button class="mt-4 bg-blue-500 text-white w-36 rounded-xl hover:bg-blue-600">
             Más detalles
           </button>
