--- a/src/pages/hoteles.astro
+++ b/src/pages/hoteles.astro
@@ -27,8 +27,9 @@ import { ciudades } from "../data/hoteles";
                      id={hotel.id} 
                      nombre={hotel.nombre} 
                      img={hotel.img} 
-                     descripcion={hotel.descripcion} 
-                     linkBase="hoteles" />
+                     descripcion={hotel.descripcion}
+                     ciudad={ciudad.nombre}
+                     />
                   ))}
                </div>
             </div>
