--- a/src/components/ItemCard.astro
+++ b/src/components/ItemCard.astro
@@ -4,10 +4,9 @@ export interface Props {
   nombre: string;
   img: string;
   descripcion: string;
-  linkBase: string; // Base del enlace (por ejemplo, "hoteles", "restaurantes", etc.)
 }
 
-const { id, nombre, img, descripcion, linkBase } = Astro.props;
+const { id, nombre, img, descripcion } = Astro.props;
 ---
 
 <article class="flex bg-white rounded-2xl shadow-lg overflow-hidden max-w-md m-4">
