--- a/src/pages/[hotel].astro
+++ b/src/pages/[hotel].astro
@@ -21,7 +21,7 @@ if (!hotelInfo) {
 }
 ---
 
-<Layout title={`Hotel ${hotelInfo.nombre}`}>
+<Layout title={`Hotel ${hotelInfo.nombre}`} isHomePage={false}>
   <Nav />
   <div class="container mx-auto p-8">
     <h1 class="text-4xl font-bold text-center mb-6">{hotelInfo.nombre}</h1>
