--- a/src/pages/actividades.astro
+++ b/src/pages/actividades.astro
@@ -27,8 +27,7 @@ import ItemCard from '../components/ItemCard.astro';
                   id={actividad.id} 
                   nombre={actividad.nombre} 
                   img={actividad.img} 
-                  descripcion={actividad.descripcion}
-                  linkBase="actividades" />
+                  descripcion={actividad.descripcion}/>
               ))}
             </div>
           </div>
