--- a/src/pages/restaurantes.astro
+++ b/src/pages/restaurantes.astro
@@ -27,8 +27,7 @@ import ItemCard from '../components/ItemCard.astro'; // Componente para la tarje
                 id={restaurante.id} 
                 nombre={restaurante.nombre} 
                 img={restaurante.img} 
-                descripcion={restaurante.descripcion}
-                linkBase="restaurantes" />
+                descripcion={restaurante.descripcion}/>
             ))}
           </div>
         </div>
