--- a/src/pages/paquetes.astro
+++ b/src/pages/paquetes.astro
@@ -27,8 +27,7 @@ import ItemCard from '../components/ItemCard.astro';  // Asegúrate de que ItemC
                 id={paquete.id} 
                 nombre={paquete.nombre} 
                 img={paquete.img} 
-                descripcion={paquete.descripcion}
-                linkBase="paquetes" />
+                descripcion={paquete.descripcion}/>
             ))}
           </div>
         </div>
