--- a/src/components/ItemCard.astro
+++ b/src/components/ItemCard.astro
@@ -15,7 +15,7 @@ const { id, nombre, img, descripcion } = Astro.props;
     <img
       src={img}
       alt={nombre}
-      class="w-1/2 object-cover rounded-2xl"
+      class="w-1/2 max-h-40 object-cover rounded-2xl"
     />
 
     <!-- Contenido de la tarjeta -->
