--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -3,40 +3,40 @@
         <h1 class="text-3xl font-bold mt-4">Explora la Magia de Nuestro Paraíso Colombiano</h1>
     </div>
     <div class="flex justify-center space-x-4 mb-6 sm:gap-16 md:gap-8 lg:gap-16">
-        <button id="hotelesBtn" class="category-button border border-blue-500 rounded-lg p-4 transition-all">
-            <a href="/hoteles">
-                <span class="flex flex-col items-center">
-                    <img src="../img/hotel.png" alt="hoteles" class="w-12 h-12 mb-2">
-                    Hoteles
-                </span>
-            </a>
-        </button>
-        <button id="actividadesBtn" class="category-button border border-blue-500 rounded-lg p-4 transition-all">
-            <a href="/actividades">
-                <span class="flex flex-col items-center">
-                    <img src="../img/logo-actividades.png" alt="actividades" class="w-12 h-12 mb-2">
-                    Actividades
-                </span>
-            </a>
-        </button>
-        <button id="restaurantesBtn" class="category-button border border-blue-500 rounded-lg p-4 transition-all">
-            <a href="/restaurantes">
-                <span class="flex flex-col items-center">
-                    <img src="../img/restaurante.png" alt="restaurantes" class="w-12 h-12 mb-2">
-                    Restaurantes
-                </span>
-            </a>
-        </button>
-        <button id="paquetesBtn" class="category-button border border-blue-500 rounded-lg p-4 transition-all">
-            <a href="/paquetes">
-                <span class="flex flex-col items-center">
-                    <img src="../img/paquetes.png" alt="paquetes" class="w-12 h-12 mb-2">
-                    Paquetes todo en uno!!
-                </span>
-            </a>
-        </button>
+        <!-- Hoteles Button -->
+        <a href="/hoteles" class="w-32 h-32">
+            <button class="border border-blue-500 rounded-lg w-full h-full p-4 flex flex-col items-center justify-center hover:bg-blue-500 transition-all bg-white">
+                <img src="../img/hotel.png" alt="hoteles" class="w-12 h-12 mb-2">
+                <span class="text-sm text-center">Hoteles</span>
+            </button>
+        </a>
+
+        <!-- Actividades Button -->
+        <a href="/actividades" class="w-32 h-32">
+            <button class="border border-blue-500 rounded-lg w-full h-full p-4 flex flex-col items-center justify-center hover:bg-blue-500 transition-all bg-white">
+                <img src="../img/logo-actividades.png" alt="actividades" class="w-12 h-12 mb-2">
+                <span class="text-sm text-center">Actividades</span>
+            </button>
+        </a>
+
+        <!-- Restaurantes Button -->
+        <a href="/restaurantes" class="w-32 h-32">
+            <button class="border border-blue-500 rounded-lg w-full h-full p-4 flex flex-col items-center justify-center hover:bg-blue-500 transition-all bg-white">
+                <img src="../img/restaurante.png" alt="restaurantes" class="w-12 h-12 mb-2">
+                <span class="text-sm text-center">Restaurantes</span>
+            </button>
+        </a>
+
+        <!-- Paquetes Button -->
+        <a href="/paquetes" class="w-32 h-32">
+            <button class="border border-blue-500 rounded-lg w-full h-full p-4 flex flex-col items-center justify-center hover:bg-blue-500 transition-all bg-white">
+                <img src="../img/paquetes.png" alt="paquetes" class="w-12 h-12 mb-2">
+                <span class="text-sm text-center">Paquetes todo en uno!!</span>
+            </button>
+        </a>
     </div>
 </main>
+
 
 <script>
     const currentPath = window.location.pathname;
