--- a/src/pages/[hotel].astro
+++ b/src/pages/[hotel].astro
@@ -33,10 +33,17 @@ if (!hotelInfo) {
       src={hotelInfo.img}
       alt={hotelInfo.nombre}
       class="w-full max-w-4xl mx-auto rounded-lg shadow-lg mt-8"
+      <p>{hotelInfo.descripciongenral}</p>
     />
-   </div>
+  </div>
+
+  <div class="mb-5 flex flex-col justify-center items-center px-4 md:px-3 lg:px-32 2xl:px-64 mx-auto">
+                <h1 class="text-3xl font-bold mb-8 text-center mt-8">Explora el lugar y sus puntos fuertes</h1>
+                <iframe
+                    src={hotelInfo.mapa}
+                    class="w-full h-[600px] rounded-2xl border-2 border-slate-300" allowfullscreen loading="lazy">
+                </iframe>
+            </div>
     
-    
-  
   <Footer />
 </Layout>
