--- a/src/pages/actividades.astro
+++ b/src/pages/actividades.astro
@@ -27,7 +27,8 @@ import ItemCard from '../components/ItemCard.astro';
                   id={actividad.id} 
                   nombre={actividad.nombre} 
                   img={actividad.img} 
-                  descripcion={actividad.descripcion}/>
+                  descripcion={actividad.descripcion}
+                  tipo="actividades"/>
               ))}
             </div>
           </div>
