--- a/src/pages/paquetes.astro
+++ b/src/pages/paquetes.astro
@@ -27,7 +27,8 @@ import ItemCard from '../components/ItemCard.astro';  // Asegúrate de que ItemC
                 id={paquete.id} 
                 nombre={paquete.nombre} 
                 img={paquete.img} 
-                descripcion={paquete.descripcion}/>
+                descripcion={paquete.descripcion}
+                tipo="paquetes"/>
             ))}
           </div>
         </div>
