--- a/src/pages/restaurantes.astro
+++ b/src/pages/restaurantes.astro
@@ -27,7 +27,8 @@ import ItemCard from '../components/ItemCard.astro'; // Componente para la tarje
                 id={restaurante.id} 
                 nombre={restaurante.nombre} 
                 img={restaurante.img} 
-                descripcion={restaurante.descripcion}/>
+                descripcion={restaurante.descripcion}
+                tipo="restaurantes"/>
             ))}
           </div>
         </div>
