--- a/src/pages/hoteles/[hotel].astro
+++ b/src/pages/hoteles/[hotel].astro
@@ -37,23 +37,23 @@ if (!hotelInfo) {
             <img src={image} class="object-cover w-full h-full" alt={`Imagen ${index + 1}`} />
           </div>
         )) ?? []}
-      </article>
-    
-      <!--Informacion general-->
-      <div class="flex flex-col justify-center mt-8">
-        <article class="flex flex-col ml-4">
-          <h1 class="text-3xl font-bold mb-4">Información general</h1>
-          {hotelInfo.descripciongeneral?.map((item, index) => (
-            <div class="mb-3">
-              <strong class="text-lg font-semibold">{item}</strong>
-              <span class="text-sm text-gray-600">
-                {hotelInfo.descripciondetalles[index]}
-              </span>
-            </div>
-          )) ?? []}
-        </article>
-      </div>   
+      </article>        
   </div>
+  <!--Informacion general-->
+  <div class="flex flex-wrap justify-center mt-8">
+    <article class="flex flex-col ml-4">
+      <h1 class="text-3xl font-bold mb-4">Información general</h1>
+      {hotelInfo.descripciongeneral?.map((item, index) => (
+        <div class="mb-3">
+          <strong class="text-lg font-semibold block">{item}</strong>
+          <span class="text-sm text-gray-600 block">
+            {hotelInfo.descripciondetalles[index]}
+          </span>
+        </div>
+      )) ?? []}
+    </article>
+  </div>
+  
 
   <div class="mb-5 flex flex-col justify-center items-center px-4 md:px-3 lg:px-32 2xl:px-64 mx-auto">
                 <h1 class="text-3xl font-bold mb-8 text-center mt-8">Explora el lugar y sus puntos fuertes</h1>
