--- a/src/pages/hoteles/[hotel].astro
+++ b/src/pages/hoteles/[hotel].astro
@@ -53,8 +53,7 @@ if (!hotelInfo) {
       )) ?? []}
     </article>
   </div>
-  
-
+  <!--API DE GOOGLE-->
   <div class="mb-5 flex flex-col justify-center items-center px-4 md:px-3 lg:px-32 2xl:px-64 mx-auto">
                 <h1 class="text-3xl font-bold mb-8 text-center mt-8">Explora el lugar y sus puntos fuertes</h1>
                 <iframe
@@ -62,6 +61,54 @@ if (!hotelInfo) {
                     class="w-full h-[600px] rounded-2xl border-2 border-slate-300" allowfullscreen loading="lazy">
                 </iframe>
             </div>
+  <!--historia y cultura -->
+  <article class="flex flex-col px-4 md:px-3 lg:px-32 2xl:px-64">
+  {hotelInfo?.contentData?.map((item) => (
+    <>
+      <h1 class="text-3xl font-bold mb-14 text-center mt-4">{item.titulo}</h1>
+
+      {/* Primer Contenedor */}
+      <div class="flex flex-col md:flex-row justify-between items-stretch">
+        <div class="md:w-2/3">
+          <p class="text-sm text-gray-600 mb-2">{item.description}</p>
+
+          {/* Historia */}
+          <strong class="text-lg font-semibold">{item.historia.title}</strong>
+          <p class="text-sm text-gray-600 mt-2">{item.historia.content}</p>
+        </div>
+        <div class="md:w-1/3 mt-4 md:mt-0 md:ml-4">
+          <img src={item.images[0]} alt="Piedra del Peñol" class="w-full h-auto max-h-64 object-cover rounded-lg" />
+        </div>
+      </div>
+
+      {/* Segundo Contenedor */}
+      <div class="flex flex-col md:flex-row justify-between items-stretch">
+        <div class="md:w-2/3">
+          <p class="text-sm text-gray-600 mb-2">{item.cultura.content}</p>
+
+          {/* Cultura */}
+          <strong class="text-lg font-semibold">{item.cultura.title}</strong>
+          <p class="text-sm text-gray-600 mt-2">{item.cultura.content}</p>
+        </div>
+        <div class="md:w-1/3 mt-4 md:mt-0 md:ml-4">
+          <img src={item.images[1]} alt="Piedra del Peñol" class="w-full h-auto max-h-64 object-cover rounded-lg" />
+        </div>
+      </div>
+
+      {/* Tercer Contenedor */}
+      <div class="flex flex-col md:flex-row justify-between items-stretch">
+        <div class="md:w-2/3">
+          <strong class="text-lg font-semibold">{item.mitos.title}</strong>
+          <p class="text-sm text-gray-600 mb-2 mt-2">{item.mitos.content}</p>
+        </div>
+        <div class="md:w-1/3 mt-4 md:mt-0 md:ml-4">
+          <img src={item.images[2]} alt="Piedra del Peñol" class="w-full h-auto max-h-64 object-cover rounded-lg" />
+        </div>
+      </div>
+    </>
+  ))}
+</article>
+
     
   <Footer />
 </Layout>
