--- a/src/pages/hoteles/[hotel].astro
+++ b/src/pages/hoteles/[hotel].astro
@@ -77,21 +77,20 @@ if (!hotelInfo) {
           <p class="text-sm text-gray-600 mt-2">{item.historia.content}</p>
         </div>
         <div class="md:w-1/3 mt-4 md:mt-0 md:ml-4">
-          <img src={item.images[0]} alt="Piedra del Peñol" class="w-full h-auto max-h-64 object-cover rounded-lg" />
+          <img src={item.images[0]} alt="Piedra del Peñol" class="w-full h-56 max-h-64 object-cover rounded-lg mb-2" />
         </div>
       </div>
 
       {/* Segundo Contenedor */}
       <div class="flex flex-col md:flex-row justify-between items-stretch">
         <div class="md:w-2/3">
-          <p class="text-sm text-gray-600 mb-2">{item.cultura.content}</p>
 
           {/* Cultura */}
           <strong class="text-lg font-semibold">{item.cultura.title}</strong>
           <p class="text-sm text-gray-600 mt-2">{item.cultura.content}</p>
         </div>
         <div class="md:w-1/3 mt-4 md:mt-0 md:ml-4">
-          <img src={item.images[1]} alt="Piedra del Peñol" class="w-full h-auto max-h-64 object-cover rounded-lg" />
+          <img src={item.images[1]} alt="Piedra del Peñol" class="w-full h-auto max-h-64 object-cover rounded-lg mb-2" />
         </div>
       </div>
 
@@ -102,7 +101,7 @@ if (!hotelInfo) {
           <p class="text-sm text-gray-600 mb-2 mt-2">{item.mitos.content}</p>
         </div>
         <div class="md:w-1/3 mt-4 md:mt-0 md:ml-4">
-          <img src={item.images[2]} alt="Piedra del Peñol" class="w-full h-auto max-h-64 object-cover rounded-lg" />
+          <img src={item.images[2]} alt="Piedra del Peñol" class="w-full h-40 max-h-64 object-cover rounded-lg mb-8" />
         </div>
       </div>
     </>
