--- a/src/pages/hoteles/[hotel].astro
+++ b/src/pages/hoteles/[hotel].astro
@@ -55,7 +55,7 @@ if (!hotelInfo) {
     <article class="flex flex-col bg-white rounded-2xl shadow-lg overflow-hidden max-w-md sm:w-full lg::w-full px-4 sm:max-w-xs">
       <header class="flex w-full flex-col text-center">
           <strong class="text-lg font-semibold">Flyer</strong>
-          <img src={hotelInfo.flyer} alt="Name Hotel" class="object-cover rounded-2xl mt-2">
+          <img src={hotelInfo.flyer} class="object-cover rounded-2xl mt-2">
       </header>
   </article>
   </div>
