--- a/src/pages/restaurantes/[restaurante].astro
+++ b/src/pages/restaurantes/[restaurante].astro
@@ -22,14 +22,99 @@ if (!restauranteInfo) {
 
 <Layout title={`Restaurante ${restauranteInfo.nombre}`} isHomePage={false}>
   <Nav />
-  <div class="text-center">
+   <!--Title and description-->
+   <div class="text-center">
     <h1 class="text-3xl font-bold mb-7">{restauranteInfo.nombre}</h1>
-    <span class="text-base text-gray-600">{restauranteInfo.descripcion}</span>
-    <img
-      src={restauranteInfo.img}
-      alt={restauranteInfo.nombre}
-      class="w-full max-w-4xl mx-auto rounded-lg shadow-lg mt-8"
-    />
-  </div>
-  <Footer />
+    <span class="text-base text-gray-600">
+      {restauranteInfo.descripcion}
+    </span>
+    <!--Bento Grid-->
+    <article class="mt-8 grid grid-cols-4 gap-4 auto-rows-[100px] sm:auto-rows-[150px] md:auto-rows-[200px] px-4 lg:px-32 mx-auto 2xl:px-64">
+      {restauranteInfo.bento?.map((image, index) => (
+        <div 
+          class={`grid-item relative rounded overflow-hidden shadow-lg ${index % 5 === 0 ? 'col-span-2 row-span-2' : ''}`}
+        >
+          <img src={image} class="object-cover w-full h-full" alt={`Imagen ${index + 1}`} />
+        </div>
+      )) ?? []}
+    </article>        
+</div>
+<!--Informacion general-->
+<div class="flex flex-wrap space-x-0 justify-center mt-8 xl:-space-x-0 2xl:space-x-72">
+  <article class="flex flex-col ml-4">
+    <h1 class="text-3xl font-bold mb-4">Información general</h1>
+    {restauranteInfo.descripciongeneral?.map((item, index) => (
+      <div class="mb-3">
+        <strong class="text-lg font-semibold block">{item}</strong>
+        <span class="text-sm text-gray-600 block">
+          {restauranteInfo.descripciondetalles[index]}
+        </span>
+      </div>
+    )) ?? []}
+  </article>
+  <article class="flex flex-col bg-white rounded-2xl shadow-lg overflow-hidden max-w-md sm:w-full lg::w-full px-4 sm:max-w-xs">
+    <header class="flex w-full flex-col text-center">
+        <strong class="text-lg font-semibold">Flyer</strong>
+        <img src={restauranteInfo.flyer} class="object-cover rounded-2xl mt-2">
+    </header>
+</article>
+</div>
+<!--API DE GOOGLE-->
+<div class="mb-5 flex flex-col justify-center items-center px-4 md:px-3 lg:px-32 2xl:px-64 mx-auto">
+              <h1 class="text-3xl font-bold mb-8 text-center mt-8">Explora el lugar y sus puntos fuertes</h1>
+              <iframe
+                  src={restauranteInfo.mapa}
+                  class="w-full h-[600px] rounded-2xl border-2 border-slate-300" allowfullscreen loading="lazy">
+              </iframe>
+          </div>
+<!--historia y cultura -->
+<article class="flex flex-col px-4 md:px-3 lg:px-32 2xl:px-64">
+{restauranteInfo?.contentData?.map((item) => (
+  <>
+    <h1 class="text-3xl font-bold mb-14 text-center mt-4">{item.titulo}</h1>
+
+    {/* Primer Contenedor */}
+    <div class="flex flex-col md:flex-row justify-between items-stretch">
+      <div class="md:w-2/3">
+        <p class="text-sm text-gray-600 mb-2">{item.description}</p>
+
+        {/* Historia */}
+        <strong class="text-lg font-semibold">{item.historia.title}</strong>
+        <p class="text-sm text-gray-600 mt-2">{item.historia.content}</p>
+      </div>
+      <div class="md:w-1/3 mt-4 md:mt-0 md:ml-4">
+        <img src={item.images[0]} alt="Piedra del Peñol" class="w-full h-56 max-h-64 object-cover rounded-lg mb-2" />
+      </div>
+    </div>
+
+    {/* Segundo Contenedor */}
+    <div class="flex flex-col md:flex-row justify-between items-stretch">
+      <div class="md:w-2/3">
+
+        {/* Cultura */}
+        <strong class="text-lg font-semibold">{item.cultura.title}</strong>
+        <p class="text-sm text-gray-600 mt-2">{item.cultura.content}</p>
+      </div>
+      <div class="md:w-1/3 mt-4 md:mt-0 md:ml-4">
+        <img src={item.images[1]} alt="Piedra del Peñol" class="w-full h-auto max-h-64 object-cover rounded-lg mb-2" />
+      </div>
+    </div>
+
+    {/* Tercer Contenedor */}
+    <div class="flex flex-col md:flex-row justify-between items-stretch">
+      <div class="md:w-2/3">
+        <strong class="text-lg font-semibold">{item.mitos.title}</strong>
+        <p class="text-sm text-gray-600 mb-2 mt-2">{item.mitos.content}</p>
+      </div>
+      <div class="md:w-1/3 mt-4 md:mt-0 md:ml-4">
+        <img src={item.images[2]} alt="Piedra del Peñol" class="w-full h-40 max-h-64 object-cover rounded-lg mb-8" />
+      </div>
+    </div>
+  </>
+))}
+</article>
+
+  
+<Footer />
 </Layout>
+
